[tool.poetry]
name = "sfdo"
version = "0.1.0"
description = "Stryke Force blog scripts"
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
license = "MIT"

[tool.poetry.scripts]
sfdo = "sfdo.application:main"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
